fixes to match R version. remove faulty step collection at end of file.

--- a/BlueMS/src/main/res/layout/fragment_h2tfile_feature.xml
+++ b/BlueMS/src/main/res/layout/fragment_h2tfile_feature.xml
@@ -92,6 +92,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:max="3000" />
+
+    <Button
+        android:id="@+id/firebase"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Test Firebase" />
+
     <View style="@style/Divider"/>
 
     <TextView
